# Scalable-Crypto-Data-Lakehouse

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: basic_ci.yml
.streamlit/: config.toml
config/: config.yaml
data/metadata/: coin_metadata.csv
docker/: Dockerfile  docker-compose.yml
great_expectations/checkpoints/: silver_to_gold_checkpoint.yml
great_expectations/expectations/: silver_ohlcv_suite.json
scripts/: cleanup_raw.sh  drop_raw.sh  fetch_data.sh  run_bronze.sh  run_gold.sh  run_pipeline.sh  run_silver.sh
src/: __init__.py
src/dashboard/: app.py
src/jobs/: bronze_ingestion.py  gold_aggregations.py  silver_transformation.py
src/quality/: quality_checks.py
src/utils/: ai_query_helper.py  config_loader.py  pipeline_orchestrator.py  schemas.py  spark_session.py
tests/: conftest.py  test_transformations.py
